--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,17 @@ body {
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+@theme {
+  --color-background-primary:#ffffff ;
+  --color-background-secondary:#f5f5f5 ;
+
+  --color-bg-primary:#2a6edd ;
+  --color-bg-primary-hover:#1a5ec7 ;
+  --color-bg-primary-active:#0a4eb0 ;
+
+  --color-bg-secondary:#e0e0e0 ;
+  --color-bg-secondary-hover:#d0d0d0 ;
+  --color-bg-secondary-active:#c0c0c0 ;
+}
